# src/main/java/com/br/fabio/desafioCrud/controller/RegisterController.java
@@ -29,23 +29,44 @@ public class RegisterController implements CarApi {
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
+
     @Override
-    public ResponseEntity<VehicleResponseList> getCarByModel(String model) {
+    public ResponseEntity<VehicleResponseList> getCarByModel(String model, Boolean isAvailable) {
         log.info("Starting getCarByModel method ");
 
-        VehicleResponseList response = registerService.getCarByModel(model);
+        VehicleResponseList response = registerService.getCarByModel(model, isAvailable);
 
         log.info("Finishing method getCarByModel with success");
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
     @Override
-    public ResponseEntity<VehicleResponseList> getCarByBrand(String brand) {
+    public ResponseEntity<VehicleResponseList> getCarByBrand(String brand, Boolean isAvailable) {
         log.info("Starting getCarByBrand method ");
 
-        VehicleResponseList response = registerService.getCarByBrand(brand);
+        VehicleResponseList response = registerService.getCarByBrand(brand, isAvailable);
 
         log.info("Finishing method getCarByBrand with success");
         return ResponseEntity.status(HttpStatus.OK).body(response);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteCar(String cardId) {
+        log.info("Starting deleteCar method ");
+
+        registerService.deleteCar(cardId);
+
+        log.info("Finishing method deleteCar with success");
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+    }
+
+    @Override
+    public ResponseEntity<Void> updateCar(String id, VehicleRequest body) {
+        log.info("Starting updateCar method with carID {} and request body {} ", id, body);
+
+
+        registerService.updateCar(id, body);
+
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 }
