# src/main/resources/swagger/swagger.yml
@@ -69,7 +69,7 @@ paths:
         - register
       summary: Delete vehicle
       description: This can only be done by the logged in user.
-      operationId: deleteUser
+      operationId: deleteCar
       parameters:
         - name: id
           in: path
@@ -98,6 +98,12 @@ paths:
           schema:
             type: string
             format: string
+        - in: query
+          name: available
+          schema:
+            type: boolean
+            default: true
+          description: Filter available vehicles
       responses:
         '200':
           description: successful operation
@@ -124,6 +130,12 @@ paths:
           schema:
             type: string
             format: string
+        - in: query
+          name: available
+          schema:
+            type: boolean
+            default: true
+          description: Filter available vehicles
       responses:
         '200':
           description: successful operation
